# katara

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
mosquitto/config/: mosquitto.conf
src/: env_config.py  logger.py  main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: health_check.py  water_solenoid.py
src/assets/: index.html
src/core/: commands.py  db.py
src/services/: mqtt_service.py
